# RESource

./: .buildinfo  .buildinfo.bak  .cdsapirc  .coverage  .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  Makefile  README.md  ROD_2024.html  Store.ipynb  Top_sites_VRE.ipynb  Untitled-1.ipynb  Visuals.ipynb  Visuals_AB.ipynb  Visuals_BC.ipynb  api.html  api_fallback.html  api_test.html  api_test_simple.html  case.html  config.yaml  dask_playground.ipynb  data_playground.ipynb  data_playground_BC.ipynb  debug_api.html  developers.html  environment.yaml  genindex.html  getting_started.html  index.html  makefile  objects.inv  playground.ipynb  prepare_CODERS_data.ipynb  pyproject.toml  requirements.txt  resource_builder.html  resource_module_runner.ipynb  (+16 more)
.doctrees/: api.doctree  api_clean.doctree  api_fallback.doctree  api_test_simple.doctree  case.doctree  debug_api.doctree  environment.pickle  getting_started.doctree  index.doctree
.doctrees/case_studies/: BC.doctree
.doctrees/notebooks/: Store_explorer.doctree  Visuals_BC.doctree  resource_module_runner.doctree
.doctrees/notes/: COMPLETE_SETUP_GUIDE.doctree  api.doctree  case.doctree  case_BC.doctree  data.doctree  debug_api.doctree  developers.doctree  environment_setup.doctree  getting_started.doctree  resource_builder.doctree  virtual_environment.doctree
.github/: FUNDING.yml
.github/workflows/: static.yml
AB_temp_analysis/: AB_2024.html  Cells_without_regulatory_buffer.pkl
RES/: AttributesParser.py  CellCapacityProcessor.py  READMD.md  RESources.py  WorldPop.py  __init__.py  __init___readthedocs.py  atb.py  boundaries.py  cell.py  cli copy.py  cli.py  cluster.py  coders.py  dash_input_app.py  dash_input_config.py  era5_cutout.py  find.py  gaez.py  gwa.py  hdf5_handler.py  lands.py  logger.py  osm.py  power_nodes.py  score.py  tech.py  timeseries.py  units.py  utility.py  visuals.py  wind.py  windspeed.py
RES.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ROD_2024/: BCH_CFP24.csv  BCH_CFP24.geojson  BCH_CFP24_solar_ts.csv  BCH_CFP24_wind_ts.csv  BC_CFP24.csv  BC_CFP24.geojson  BC_CFP24_solar.csv  BC_CFP24_wind.csv  ROD_playground.ipynb
_modules/: index.html
_sources/: api.md  api.md.txt  getting_started.md.txt  index.md  index.md.txt  resource_builder.md.txt
case_studies/: BC.html
config/: bc_combined.yml  config.yaml  config.yml  config_CAN.yaml  config_WB6.yaml  config_linking_tool.yml  config_master.yml  config_user.yml  data_source.yml  hdf5_handler.py  test_config.yml
data/: region_mapping.csv  units.csv
docs/: CNAME  index.html  index_light.html  requirements.txt  test  test_nodoc_example.py  time_series_plots.html
env/: Linking.yaml  environment.yml
linkingtool/: AttributesParser.py  CellCapacityProcessor.py  RESources.py  Visualizations.py  WorldPop.py  atb.py  attributes_parser.py  boundaries.py  cell.py  cell_capacity_processor.py  cli copy.py  cli.py  cluster.py  coders.py  dataprep.py  era5_cutout.py  find.py  gaez.py  gwa.py  hdf5_handler.py  lands.py  linking_data.py  linking_solar.py  linking_utility.py  linking_vis.py  linking_wind.py  osm.py  score.py  tech.py  timeseries.py  units.py  user_input_dash.py  utility.py  utils.py  visuals.py  wind_utility.py  windspeed.py
linkingtool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
notebooks/: Reports_generator.ipynb  Store_explorer.html  Store_explorer.ipynb  Visuals.html  Visuals.ipynb  Visuals_BC.html  create_resource_options_solar.ipynb  create_resource_options_wind.ipynb  prepare_data.ipynb  resource_module_runner.html  resource_options_select_top_sites.ipynb  resource_plots.ipynb  result_exchange.ipynb  test.geojson  tutorial.html  update_investments.ipynb
notes/: api.html  case.html  case_BC.html  data.html  debug_api.html  developers.html  environment_setup.html  getting_started.html  land_avability.html  resource_builder.html  virtual_environment.html
results/: resource_options_solar.csv  resource_options_solar_timeseries.csv  resource_options_wind.csv  resource_options_wind_timeseries.csv
templates/: report_template.md
workflow/: snakefile
(+137 files in other folders)
